--- a/css/master.css
+++ b/css/master.css
@@ -1,14 +1,13 @@
 body {
+  width: 600px;
   background-color: #eee;
-  text-align: center;
   display: flex;
-}
-
-body>* {
-  margin: 10px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .board {
+  margin-top: 10px;
   background-color: #f0d9b5;
   border: 1px solid #b58863;
   position: relative;
@@ -16,7 +15,12 @@ body>* {
   height: 500px;
 }
 
+#stackContainer {
+  display:flex;
+}
+
 .stack {
+  margin: 10px;
   position: relative;
   width: 150px;
   height: 150px;
