--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,27 @@
 body {
-  width: 600px;
+  display: flex;
+  /*align-items: center;*/
   background-color: #eee;
+}
+#player1, #player2 {
+  width: 150px;
+  height: 540px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  wrap: flex-wrap;
+}
+.card {
+  /*position: relative;*/
+  margin: 2px;
+  width: 60px;
+  height: 60px;
+  border: 2px solid #b58863;
+  background-color: #f0d9b5;
+
+}
+.board-container {
+  width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
